--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = customtkinter
 version = 5.1.2
 description = Create modern looking GUIs with Python
-long_description = A modern and customizable python UI-library based on Tkinter: https://github.com/TomSchimansky/CustomTkinter
+long_description = A modern and customizable python UI-library based on Tkinter (modified to work with pyinstaller onefile): https://github.com/TomSchimansky/CustomTkinter
 long_description_content_type = text/markdown
 url = https://github.com/TomSchimansky/CustomTkinter
 author = Tom Schimansky
